Fixed positioning of elements, still working on overlap when screen gets smaller :(

--- a/style/index.css
+++ b/style/index.css
@@ -91,9 +91,6 @@ header {
     height: 20vh;
     color: whitesmoke;
     margin-top: 1%;
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .name {
@@ -102,7 +99,6 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 1%;
 }
 
 h1 {
@@ -115,8 +111,10 @@ h1 {
     border-radius: 10px;
 }
 
-header nav {
-    margin: 0 0 4%;
+nav {
+    margin-bottom: 4%;
+    display: flex;
+    justify-content: center;
 }
 
 nav a {
@@ -136,15 +134,16 @@ nav a:hover {
 }
 
 .about {
-    margin:0 auto;
+    margin: 6% auto 0;
     color: whitesmoke;
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
-    width: 60%;
+    width: 75%;
     height: 20vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: space-around;
     border: 2px solid whitesmoke;
 }
 
@@ -161,13 +160,15 @@ nav a:hover {
     padding-bottom: 1%;
 }
 
+.big-image-container {
+    display: flex;
+}
+
 .bigimage {
     width: 100%;
-    height: 30vh;
+    height: 25rem;
     margin: 2% auto 4%;
-    background-image: url(/Assets/java.jpg);
-    background-position: center;
-    background-size: cover;
+    object-fit: cover;
     border-top: 2px solid whitesmoke;
     border-bottom: 2px solid whitesmoke;
 }
